--- a/Network/base/peer-base.yaml
+++ b/Network/base/peer-base.yaml
@@ -20,8 +20,8 @@ services:
       - CORE_PEER_GOSSIP_USELEADERELECTION=true
       - CORE_PEER_GOSSIP_ORGLEADER=false
       - CORE_PEER_PROFILE_ENABLED=true
-      - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
-      - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
-    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+      - CORE_PEER_TLS_CERT_FILE=.
+      - CORE_PEER_TLS_KEY_FILE=.
+      - CORE_PEER_TLS_ROOTCERT_FILE=.
+    working_dir: /home/ec2-user/networks/BlockChain/Network
     command: peer node start
